--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+    --pink: #ff6dff;
+    --pink-pastel: #ff9cff;
+}
+
+
 * {
     padding: 0;
     margin: 0;
@@ -7,6 +13,7 @@
 body {
     width: 100%;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 .container-fluid {
@@ -25,6 +32,7 @@ img {
 }
 
 header {
+    position: sticky;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -45,7 +53,7 @@ header {
     display: grid;
     grid-template-rows: 23% 47.5% 23%;
     align-items: center;
-    background-color: rgb(255, 35, 35);
+    background-color: var(--pink-pastel);
     height: 95dvh;
 }
 
@@ -107,6 +115,7 @@ header {
 
 .carousel {
     background-color: rgb(0, 0, 0);
+    box-shadow: 0px 0px 70px 1px #8888884f;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -137,6 +146,7 @@ header {
 }
 
 .carousel_img img {
+    image-rendering: optimizeQuality;
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -152,10 +162,10 @@ header {
 
 .manual_btn {
     border: 2px solid rgba(255, 255, 255, 0);
-    background-color: #fff;
-    padding: 5px;
+    background-color: #ffffff;
+    padding: 3px;
     border-radius: 9px;
-    transition: all .5s;
+    transition: all .3s;
     cursor: pointer;
 }
 
@@ -167,10 +177,6 @@ header {
     background-color: rgb(136, 136, 136);
 }
 
-
-#radio1:checked ~ .auto_pass .auto_btn1 {
-    background-color: red;
-}
 #radio1:checked~.first {
     margin-left: 0;
     transition: all .5s;
@@ -207,6 +213,26 @@ header {
     margin-left: -35%;
     transition: all .5s;
 }
+
+.manual_btn.checked:before {
+    content: "";
+    width: 0vh;
+    background-color: var(--pink);
+    transform-origin: left;
+    transition: transform 0.3s;
+    transform: scaleX(0);
+}
+
+.manual_btn.checked {
+    border-radius: 5px;
+    margin-right: 8px;
+    width: 2vh;
+    background-color: var(--pink);
+    transform-origin: left;
+    transform: scaleX(1.2);
+    transition: 0.3s;
+}
+
 .auto_pass {
     position: absolute;
     width: 100%;
@@ -225,4 +251,47 @@ header {
 
 .auto_pass div:not(:last-child) {
     margin-right: 5px;
+}
+
+.paralax {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aqua;
+    height: 100vh;
+}
+
+.paralax_div {
+    background: url(/assets/img/6c2e9075cc86f777dfcb0eb9ff66e7b9.jpg) center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    box-shadow: 0px 0px 100px 6px #a0a0a0ce;
+    width: 100%;
+    height: 50%;
+    z-index: 0;
+}
+
+.encomende {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(0,0,0);
+    background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 35%, rgba(0,0,0,1) 100%);
+    width: 100%;
+    height: 100%;
+}
+
+.encomende a {
+    background-color: #1900ff;
+    padding: 0.6em;
+    border-radius: 16px;
+    color: #ffffff;
+    text-decoration: none;
+    transition: all 0.4s;
+}
+
+.encomende a:hover {
+    background-color: #ff6dff;
+    transition: all 0.4s;
 }
