--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+@import url(darkmode/darkmode.css);
+
+
 :root {
     --pink: #ff97ff;
     --pink-pastel: #ffa9ff;
@@ -6,7 +9,12 @@
     --salmon-pastel: #F5E1D6;
     --salmon: #E4AB98;
     --bisque: #F9F2E0;
-
+    --purple: #965fd4;
+    --purple-two: #734f9a;
+    --green: #3f6d4e;
+    --green-lima: #8bd450;
+    --blue-marine: #1d1a2f;
+    --black: #0f0f0f;
 }
 
 
@@ -14,12 +22,15 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    transition: all 0.3s ease-in-out;
 }
+
 
 body {
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
+    user-select: none;
 }
 
 .container-fluid {
@@ -60,6 +71,102 @@ header {
     height: 5vh;
 }
 
+.anima {
+    display: flex;
+    width: 35px;
+    height: 35px;
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url(../animation/pixil-layer-1.png);
+    transition: background-image 0.3s ease-in-out;
+}
+
+.anima.active {
+    animation: changeImage 1s steps(7) forwards;
+}
+
+.anima.reverse {
+    animation: changeImageReverse 1s steps(7) forwards;
+}
+
+
+@keyframes changeImage {
+
+    0%,
+    14.28% {
+        background-image: url('../animation/pixil-layer-1.png');
+    }
+
+    14.28%,
+    28.56% {
+        background-image: url('../animation/pixil-layer-2.png');
+    }
+
+    28.56%,
+    42.84% {
+        background-image: url('../animation/pixil-layer-3.png');
+    }
+
+    42.84%,
+    57.12% {
+        background-image: url('../animation/pixil-layer-4.png');
+    }
+
+    57.12%,
+    71.4% {
+        background-image: url('../animation/pixil-layer-5.png');
+    }
+
+    71.4%,
+    85.68% {
+        background-image: url('../animation/pixil-layer-6.png');
+    }
+
+    85.68%,
+    100% {
+        background-image: url('../animation/pixil-layer-7.png');
+    }
+}
+
+@keyframes changeImageReverse {
+
+    0%,
+    14.28% {
+        background-image: url('../animation/pixil-layer-7.png');
+    }
+
+    14.28%,
+    28.56% {
+        background-image: url('../animation/pixil-layer-6.png');
+    }
+
+    28.56%,
+    42.84% {
+        background-image: url('../animation/pixil-layer-5.png');
+    }
+
+    42.84%,
+    57.12% {
+        background-image: url('../animation/pixil-layer-4.png');
+    }
+
+    57.12%,
+    71.4% {
+        background-image: url('../animation/pixil-layer-3.png');
+    }
+
+    71.4%,
+    85.68% {
+        background-image: url('../animation/pixil-layer-2.png');
+    }
+
+    85.68%,
+    100% {
+        background-image: url('../animation/pixil-layer-1.png');
+    }
+}
+
 /* Slider */
 
 .slider_section {
@@ -86,7 +193,10 @@ header {
         linear-gradient(-45deg, #ffffff00 40%, #ffffff 0 60%, #ffffff00 0) right/300% 100% no-repeat;
     background-clip: text, padding-box;
     transition: 1s;
+    user-select: none;
     cursor: pointer;
+    padding: 6px;
+    border-radius: 10px;
 }
 
 .info h2:hover {
@@ -310,8 +420,9 @@ header {
     height: 100%;
 }
 
+
 .encomende a {
-    background-color: var(--pink);
+    background-color: var(--purple-two);
     padding: 0.6em;
     border-radius: 16px;
     color: #000000;
@@ -320,6 +431,50 @@ header {
 }
 
 .encomende a:hover {
-    background-color: var(--pink-pastel);
+    background-color: var(--purple);
     transition: all 0.4s;
+}
+
+/* Perfil */
+
+.profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--brow-pastel);
+
+}
+
+.profile_center {
+    width: 216px;
+    height: 216px;
+    background-size: cover;
+    background-position: unset;
+    border-radius: 100%;
+    overflow: hidden;
+    z-index: 10;
+}
+
+
+.profile_center:hover {
+    overflow: hidden;
+    color: #c300ff;
+    box-shadow: 0 0 25px #000000;
+}
+
+
+.profile_center img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.social__media {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
