--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,7 +456,7 @@ a {
     background-color: var(--purple-two);
     padding: 0.6em;
     border-radius: 16px;
-    color: #000000;
+    color: #ffffff;
     text-decoration: none;
     transition: all 0.4s;
 }
